# bank-account-validator

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  LICENSE  Makefile  Pipfile  README.rst  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
bank_account_validator/: core.py  exceptions.py  utils.py
tests/: data.py  test_core.py  test_utils.py
